Some fixes for firefox jumping fixed images bug

--- a/client/views/default/main/home/home.less
+++ b/client/views/default/main/home/home.less
@@ -3,13 +3,19 @@
 article.default-layout article.main-home {
     .about {
         height: 100vh;
-        background-image: url(/images/tent.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
-        background-attachment: fixed;
         display: table;
         width: 100%;
+
+        > .bg {
+            top: 0;
+            left: 0;
+            width: 100vw;
+            background-image: url(/images/tent.jpg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+            z-index: -1;
+        }
 
         > .center {
             display: table-cell;
